Complete user CRUD controller
Need minor refactoring.
