# server/swagger.yaml
@@ -4,6 +4,21 @@ tags:
 
 paths:
   /api/v1/users:
+    # [GET] users
+    get:
+      tags:
+        - users
+      summary: Get Users
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
     # [POST] users
     post:
       tags:
@@ -12,7 +27,7 @@ paths:
       parameters:
         - name: body
           in: body
-          description: user Data
+          description: User Data
           required: true
           schema:
             $ref: '#/definitions/user'
@@ -23,6 +38,51 @@ paths:
           description: 'Bad Request'
         409:
           description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  /api/v1/users/{id}:
+    # [UPDATE] user
+    put:
+      tags:
+        - users
+      summary: Update User
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: User Id
+          required: true
+          type: string
+        - name: body
+          in: body
+          description: User Data
+          required: true
+          schema:
+            $ref: '#/definitions/user'
+      responses:
+        400:
+          description: 'Bad Request'
+        500:
+          description: 'Server Error'
+
+    # [DELETE] user
+    delete:
+      tags:
+        - users
+      summary: Delete User
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: User Id
+          required: true
+          type: string
+      responses:
+        400:
+          description: 'Bad Request'
         500:
           description: 'Server Error'
 
